--- a/blogspot.html
+++ b/blogspot.html
@@ -1,13 +1,16 @@
 <html>
     <head>
-          <title>El titulo del post</title>
-          <link rel="stylesheet"href="css/
-           estilos.css" />
+           <title>El titulo del post</title>
+           <link rel="stylesheet"href="css/
+          estilos.css" />
     </head>
     <body>
         <div id="container"></div>
             <div id="cabecera">
-                 Cabecera
+                   Hyperblog
+                   <span id="tagline">
+                       
+                   </span>
             </div>
             <div id="post">
                <h1> Este es el titulo atractivo e interesante del post</h1>
@@ -17,6 +20,3 @@
         </div>
     </body>
 </html>
-
-
-gity 
